--- a/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
@@ -85,10 +85,34 @@
   <div class="status-block">
     <h2 class="heading-small">{{ t('Decide whether to proceed') }}</h2>
     <p>{{ t('{{ defendantName }} has rejected your claim.', { defendantName: claim.claimData.defendant.name }) }}</p>
+    <p>{{ t('You need to decide whether to proceed with the claim. You need to respond before 4pm on {{ respondToMediationDeadline }}. Your claim won’t continue if you don’t respond by then.',
+        { respondToMediationDeadline: claim.respondToMediationDeadline | date }) }}</p>
+    <p>{{ _respond(claim, 'View and respond') }}</p>
+  </div>
+{% endmacro %}
+
+{% macro claimRejectedWithDQsForDefendantClaimDetails(claim) %}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('Wait for the claimant to respond') }}</h2>
+    {% if claim.response.freeMediation === YesNoOption.Yes %}
+      <p>{{ t('You have rejected the claim. You’ve suggested mediation.') }}</p>
+      <p>{{ t('We’ll ask {{ claimantName }} if they agree to take part in mediation.',{ claimantName: claim.claimData.claimant.name }) }}</p>
+      <p>{{ t('If they agree, we’ll contact you with details of your appointment. If not, you might have to go to a hearing.') }}</p>
+    {% endif %}
+
+    <p>{{ t('{{ defendantName }} has rejected your claim.', { defendantName: claim.claimData.defendant.name }) }}</p>
     <p>{{ t('You need to respond before 4pm on {{ respondToMediationDeadline }}. Your claim won’t continue if you don’t respond by then.',
         { respondToMediationDeadline: claim.respondToMediationDeadline | date }) }}</p>
     <p>{{ _respond(claim, 'View and respond') }}</p>
   </div>
+{% endmacro %}
+
+{% macro claimRejectedWithDQsForClaimantDashboard(claim) %}
+  {{ t('Decide whether to proceed') }}
+{% endmacro %}
+
+{% macro claimRejectedWithDQsForDefendantDashboard(claim) %}
+  {{ t('Wait for the claimant to respond') }}
 {% endmacro %}
 
 {% macro claimRejectedFreeMediationYESForDefendantDashboard() %}
