Update route tests

--- a/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
+++ b/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
@@ -1,7 +1,7 @@
 {% from "table.njk" import tableStart, tableEnd, row %}
 
 {% macro freeMediationBlock(claim, mediationDraft, contactPerson) %}
-  {{ tableStart('freeMediation', 'Free telephone mediation') }}
+  {{ tableStart('freeMediation', 'Consider free mediation') }}
   {{
   row(
     label = 'Will you try free mediation?',
