Initial Draft of Claimant Response

--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -23,7 +23,8 @@
   claimRejectedFreeMediationNOForClaimantClaimDetails,
   claimRejectedFreeMediationNOForDefendantClaimDetails,
   claimRejectedFreeMediationYESForClaimantClaimDetails,
-  claimRejectedFreeMediationYESForDefendantClaimDetails %}
+  claimRejectedFreeMediationYESForDefendantClaimDetails,
+  claimRejectedWithDQsForClaimantClaimDetails %}
 
 {% from "./claimStatus/claimPartAdmittedDefendant.njk" import
   claimPartAdmittedToOweForDefendantClaimDetails,
