--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -47,6 +47,12 @@
   <p>{{ paymentDeclaration.explanation }}</p>
 {% endmacro %}
 
+
+{% macro fullResponseFragment() %}
+  <h2 class="heading-medium">{{ t('Full response') }}</h2>
+  <p>To view the full response, including their hearing requirements, download their response (PDF, 123KB).</p>
+{% endmacro %}
+
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
@@ -79,7 +85,7 @@
 
         {% endif %}
 
-      {% else %}
+      {% elseif claim.response.responseType === ResponseType.FULL_ADMISSION.value or claim.response.responseType === ResponseType.PART_ADMISSION.value %}
         {% if claim.response.responseType === ResponseType.FULL_ADMISSION.value %}
           <p>{{ t('{{ defendantName }} admits they owe all the money you’ve claimed.', { defendantName: defendantName }) }}</p>
           <p>
@@ -130,6 +136,7 @@
           {% if claim.response.evidence and claim.response.evidence.rows.length > 0 %}
             {{ evidenceFragment(claim.response.evidence) }}
           {% endif %}
+          {{ fullResponseFragment() }}
         {% elseif page === 1 %}
           {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
             <p>{{ t('The defendant suggested this repayment plan:') }}</p>
@@ -148,6 +155,24 @@
 
           {% endif %}
         {% endif %}
+        {% else %}
+          <p>{{ t('{{ defendantName }} has rejected the claim.', { defendantName: defendantName}) }}</p>
+
+          <h2 class="heading-medium">{{ t('Their defence') }}</h2>
+
+          <h3 class="heading-small form-group-related">{{ t('Why they disagree with the claim') }}</h3>
+          <p>{{ t('"{{ defence }}"', { defence: claim.response.defence }) }}</p>
+
+          {% if claim.response.timeline and claim.response.timeline.rows.length > 0 %}
+            <h3 class="heading-small form-group-related">{{ t('Their timeline of events') }}</h3>
+            {{ timelineFragment(claim.response.timeline) }}
+          {% endif %}
+
+          {% if claim.response.evidence and claim.response.evidence.rows.length > 0 %}
+            {{ evidenceFragment(claim.response.evidence) }}
+          {% endif %}
+
+          {{ fullResponseFragment() }}
       {% endif %}
 
       <form novalidate method="post">
