--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -50,7 +50,7 @@
 
 {% macro fullResponseFragment() %}
   <h2 class="heading-medium">{{ t('Full response') }}</h2>
-  <p>To view the full response, including their hearing requirements, download their response (PDF, 123KB).</p>
+  <p> <a href="#">Download their full response and hearing requirements </a>(PDF, 123KB).</p>
 {% endmacro %}
 
 {% block content %}
