--- a/src/main/features/response/views/confirmation/full-defence-steps.njk
+++ b/src/main/features/response/views/confirmation/full-defence-steps.njk
@@ -6,8 +6,13 @@
   <p>{{ t('We’ll ask {{ claimantName }} if they want to try mediation. If they agree, we’ll contact you with a date for an appointment. If not, we’ll tell you what to do.', { claimantName: claimantName }) | safe }}</p>
 {% elif claim.response.directionsQuestionnaire.selfWitness %}
   <p>{{ t('If {{ claimantName }} accepts your response the claim will be settled. We’ll contact you by post when they respond.', { claimantName: claimantName }) | safe }}</p>
-  <p>{{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
-  <p>{{ t('We’ll contact you by post if we set a hearing date to tell you how to prepare.') }}</p>
+  {% if claim.response.freeMediation === FreeMediationOption.YES %}
+    <p>{{ t('If {{ claimantName }} rejects your response we’ll ask them to try mediation. If they agree, we’ll contact you to arrange an appointment.') }}</p>
+    <p>{{ t('If they reject mediation the court will review the case. You might have to go to a hearing.') }}</p>
+  {% else %}
+    <p>{{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
+  {% endif %}
+  <p>{{ t('We’ll contact you to tell you what to do next.') }}</p>
 {% else %}
   <p>{{ t('You’ll have to go to a hearing.') }}</p>
   <p>{{ t('You need to ' + internalLink('complete a directions questionnaire form ',
@@ -21,5 +26,5 @@
   <h2 class="heading-medium">{{ t('Settle out of court') }}</h2>
   <p>{{ t('You can still {{ settleOutOfCourt }}. For example you could offer to repair goods you sold the claimant or suggest a payment.',
       { settleOutOfCourt: internalLink(t('settle the claim out of court'), OfferPaths.settleOutOfCourtPage.evaluateUri({ externalId: claim.externalId })) }) | safe }}</p>
-  <p>{{ t('You can avoid getting a County Court Judgment if the claimant accepts your offer.') }}</p>
+  <p>{{ t('If the claimant accepts your offer you can avoid getting a County Court Judgment and the claim can be settled.') }}</p>
 {% endif %}
