--- a/src/main/features/dashboard/views/index.njk
+++ b/src/main/features/dashboard/views/index.njk
@@ -7,6 +7,11 @@
 {% set heading = 'Your money claims account' %}
 
 {% block content %}
+
+  <div class="mobile-inline font-xsmall">
+    Next working day: {{ nextWorkingDay }}
+  </div>
+
   <div class="grid-row">
     <div class="column-full">
       {% if not claimDraftSaved %}
